# brainwormsbot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: brainworms.txt  extract.lua  main.rs  out.csv  out.txt
