[package]
name = "brainwormsbot"
authors = ["kith"]
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0" }
tokio = { version =  "1.48.0", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "macros", "chrono", "derive"] }

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = false
stript = "debuginfo"
lto = true
panic = "unwind"
incremental = true
